fix: spacing for main content

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -47,6 +47,7 @@
 
   &__body {
     --flow-space: #{get-size(800)};
+    padding-top: 1rem;
 
     /**
      * Generic HTML styles
